@@ -1,5 +1,10 @@
 2005-08-03  Luc Pionchon  <luc.pionchon@nokia.com>
 
+	* hildon-widgets/hildon-scroll-area.c
+	(hildon_scroll_area_destroy): one-instruction function:
+	removed. Call g_free directly.
+	+ minor cleanup
+
 	* hildon-widgets/hildon-date-editor.h: added
 	HildonDateEditorErrorType error enumeration type, removed signal
 	"validate-date" virtual function, added signal "date-error"
